k8s/01-namespace.yaml

apiVersion: v1
kind:  Namespace
metadata:
  name:  todo-app
  labels: 
    name: todo-app
