k8s/05-web-service-bluegreen.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-web
  namespace: todo-app
  labels:  
    app: todo-web
spec:
  selector:
    app: todo-web
    version:  blue    # ← Ta label določa routing! 
  ports: 
  - port: 80
    targetPort: 5000
  type: ClusterIP
