k8s/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind:  Ingress
metadata:  
  name: todo-ingress
  namespace: todo-app
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls:  "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  ingressClassName: traefik
  rules:
  - host: todo.88.200.24.49.nip.io
    http:
      paths:
      - path: /
        pathType:  Prefix
        backend:
          service:
            name: todo-web
            port:  
              number: 80
  tls:  
  - hosts:  
    - todo.88.200.24.49.nip.io
    secretName: todo-tls-cert
